@@ -566,13 +566,15 @@
 	+ Improve AM Bomb
 	+ Improve blast tool
 
-	- Improve Thanos:
+	= Improve Thanos:
 		+ Lamp sounds
 		+ Velocities
-		- Phasing: each particle randomly pulverizes, but towards band end prob is 100%
+		+ Phasing: each particle randomly pulverizes, but towards band end prob is 100%
+			+ Fix formula for prob
 		+ Greyscaling (of texture and particles) before Thanos snap, and mass changes (lighter), and different phasing of ashing in band			
 			+ Try with decay - WAS ALREADY DONE
 				+ Make sure we only upload decay when we mark a dirty flag
+		- Ocean Surface
 
 
 	- Send for testing
