@@ -262,6 +262,7 @@ public:
         float radius,
         float leftFrontX,
         float rightFrontX,
+        bool isSparseMode,
         float currentSimulationTime,
         GameParameters const & gameParameters);
 
